--- a/Documents/NetBeansProjects/ManajemenMasjid/src/view/Dashboard.form
+++ b/Documents/NetBeansProjects/ManajemenMasjid/src/view/Dashboard.form
@@ -186,7 +186,7 @@
                                       <Component id="jLabel20" min="-2" pref="26" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jlTambahKeuangan" alignment="0" min="-2" pref="166" max="-2" attributes="0"/>
-                                  <Component id="jlKeuangan1" alignment="0" min="-2" pref="247" max="-2" attributes="0"/>
+                                  <Component id="jlKeluar" alignment="0" min="-2" pref="247" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
@@ -228,7 +228,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jlDetailKeuangan" min="-2" pref="34" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jlKeuangan1" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="jlKeluar" min="-2" pref="34" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -270,6 +270,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="       Profil Masjid"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlProfileMasjidMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlDaftarInventaris">
               <Properties>
@@ -392,7 +395,7 @@
                 <Property name="text" type="java.lang.String" value="jLabel19"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jlKeuangan1">
+            <Component class="javax.swing.JLabel" name="jlKeluar">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="14" style="1"/>
