--- a/Documents/NetBeansProjects/ManajemenMasjid/src/view/ProfilMasjid.form
+++ b/Documents/NetBeansProjects/ManajemenMasjid/src/view/ProfilMasjid.form
@@ -302,6 +302,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="       Profil Masjid"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlProfileMasjidMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlDaftarInventaris">
               <Properties>
@@ -388,6 +391,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="       Tambah Pengurus"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlTambahPengurusMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlTambahKeuangan">
               <Properties>
@@ -434,6 +440,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Keluar"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlKeluarMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -547,16 +556,10 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="0" pref="652" max="32767" attributes="0"/>
-                              <Component id="btnReset" min="-2" pref="113" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnSimpan" min="-2" pref="113" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="tfSejarahSingkat" alignment="0" pref="886" max="32767" attributes="0"/>
+                                  <Component id="tfSejarahSingkat" alignment="0" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                           <Group type="102" alignment="0" attributes="0">
@@ -609,6 +612,12 @@
                                   </Group>
                               </Group>
                               <EmptySpace min="0" pref="2" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnReset" min="-2" pref="113" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="btnSimpan" min="-2" pref="113" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
