--- a/Documents/NetBeansProjects/ManajemenMasjid/src/view/Dashboard.form
+++ b/Documents/NetBeansProjects/ManajemenMasjid/src/view/Dashboard.form
@@ -188,11 +188,11 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="jLabel20" min="-2" pref="26" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jlTambahKeuangan" alignment="0" min="-2" pref="166" max="-2" attributes="0"/>
                                   <Component id="jlKeluar" alignment="0" min="-2" pref="247" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
+                          <Component id="jlTambahKeuangan" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -287,6 +287,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="       Daftar Inventaris"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlDaftarInventarisMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlInventaris">
               <Properties>
@@ -326,6 +329,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="       Daftar Pengurus"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlDaftarPengurusMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlDetailKeuangan">
               <Properties>
@@ -376,6 +382,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="       Tambah Keuangan"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlTambahKeuanganMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel19">
               <Properties>
